--- a/app.yaml
+++ b/app.yaml
@@ -13,5 +13,5 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v3
       with:
-        app-name: "NOME_DO_SEU_APP"
+        app-name: "conexaoSensoresMQTT-API"
         slot-name: "production"
