--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -1,26 +1,25 @@
-#name: Deploy to Azure
+name: Deploy to Azure Web App
 
-#on:
-#  push:
-#    branches:
-#      - main
+on:
+  push:
+    branches:
+      - main
 
-#jobs:
-#  deploy:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout code
-#        uses: actions/checkout@v2
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
 
-#      - name: Login to Azure
-#        uses: azure/login@v1
-#       with:
-#          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-#          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-#          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+      - name: Log in to Azure
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-#      - name: Deploy to Azure Web App
-#        uses: azure/webapps-deploy@v3
-#        with:
-#          app-name: conexaoSensoresMQTT-API
-#          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: conexaoSensoresMQTT-API
+          slot-name: Production
+          package: .
